--- a/src/css/Food-App.css
+++ b/src/css/Food-App.css
@@ -35,6 +35,35 @@
     margin-top: 5px;
 }
 
+
+.filter {
+    background-color: rgb(93,93,93);
+    display: flex;
+    margin: 5px;
+    padding: 5px;
+    width: calc(100%-10px);
+    flex-wrap: wrap;
+}
+
+
+.filter input, .filter button {
+    background-color: white;
+    font-size: 1.3rem;
+    margin: 5px;
+    border-radius: 5px;
+    border: 1px solid gray;
+}
+
+.filter button {
+    padding: 5px;
+    cursor: pointer;
+}
+
+.filter button:hover {
+    background-color: #333;
+    color: whitesmoke;
+}
+
 .restaurant-container {
     margin: 10px 0;
     display: flex;
@@ -42,12 +71,18 @@
 }
 
 .res-card {
-    width: 150px;
+    width: 200px;
     height: 100%;
     padding: 5px;
     background-color: white;
     border-radius: 10px;
     margin: 10px;
+}
+
+.res-card:hover {
+    border: 1px solid black;
+    cursor: pointer;
+    background-color: #f0f0f0;
 }
 
 .card-img {
@@ -57,8 +92,3 @@
     border-radius: 10px;
 }
 
-.res-card:hover {
-    border: 1px solid black;
-    cursor: pointer;
-    background-color: #f0f0f0;
-}
