--- a/src/css/Food-App.css
+++ b/src/css/Food-App.css
@@ -163,3 +163,34 @@ body {
     width: 100%;
     height: 100%;
 }
+
+.footer-container {
+    background-color: lightgray;
+    margin-top: 5px;
+    padding: 50px;
+    display: flex;
+    justify-content: space-around;
+    border: 1px solid black;
+}
+
+.footer-logo {
+    width: 100%;
+    height: 120px;
+    display: block;
+    border-radius: 10px;
+    margin: 5px;
+}
+
+.company h4 {
+    font-weight: 600;
+}
+
+.company {
+    line-height: 1.5;
+}
+
+.company ul {
+    list-style-type: none;
+    color: #333;
+    cursor: pointer;
+}
